--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -98,7 +98,7 @@ RUN wget https://downloads.mariadb.org/interstitial/${MARIADB_VERSION}/source/${
   && cmake -DPLUGIN_INNODB=NO -DPLUGIN_TOKUDB=NO -DPLUGIN_ROCKSDB=NO -DPLUGIN_MROONGA=NO -DPLUGIN_SPIDER=NO -DPLUGIN_SPHINX=NO -DPLUGIN_FEDERATED=NO -DPLUGIN_FEDERATEDX=NO -DPLUGIN_CONNECT=NO -DCMAKE_BUILD_TYPE=DEBUG -SWITH_DEBUG=1 -DWITH_EMBEDDED_SERVER=OFF -DCMAKE_INSTALL_PREFIX=/opt/server .. \
   && make -j$(nproc) \
   && make install \
-  && cp -r storage/mytile/externals/install/include/tiledb/ /usr/include/tiledb/ \
+  && cp -r storage/mytile/externals/install/include/* /usr/include/ \
   && cp -r storage/mytile/externals/install/lib/libtiledb.so* /usr/lib/ \
   && cd ../../ \
   && rm -r ${MARIADB_VERSION}
