run docker only

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -6,9 +6,9 @@ on:
   workflow_call:
     secrets:
       DOCKERHUB_USERNAME:
-        required: true
+        required: false
       DOCKERHUB_TOKEN:
-        required: true
+        required: false
 
 jobs:
   deploy:
@@ -26,10 +26,6 @@ jobs:
             repository: "tiledb/tiledb-mariadb-r"
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push develop
         uses: docker/build-push-action@v5
         if: ${{ github.ref_name == github.event.repository.default_branch }}
@@ -47,7 +43,7 @@ jobs:
         with:
           context: .
           file: docker/${{ matrix.configuration.dockerfile }}
-          push: true
+          push: false
           tags: |
             ${{ matrix.configuration.repository }}:latest
             ${{ matrix.configuration.repository }}:${{ github.ref_name }}
