--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -39,13 +39,13 @@ jobs:
       - name: Setup macOS
         if: runner.os == 'macOS'
         run: bash scripts/ci/setup-macos.sh
-      - name: Build libtiledb
-        if: ${{ ! matrix.superbuild }}
-        run: bash scripts/ci/build-libtiledb.sh
-      - name: Build TileDB-MariaDB
-        run: bash scripts/ci/build-tiledb-mariadb.sh
+#      - name: Build libtiledb
+#        if: ${{ ! matrix.superbuild }}
+#        run: bash scripts/ci/build-libtiledb.sh
+#      - name: Build TileDB-MariaDB
+#        run: bash scripts/ci/build-tiledb-mariadb.sh
   deploy:
     needs: build
-    if: github.repository_owner == 'TileDB-Inc' && (startsWith(github.ref, 'refs/tags/') || github.ref_name == github.event.repository.default_branch)
+#    if: github.repository_owner == 'TileDB-Inc' && (startsWith(github.ref, 'refs/tags/') || github.ref_name == github.event.repository.default_branch)
     uses: ./.github/workflows/docker.yaml
     secrets: inherit
