--- a/docker/Dockerfile-server
+++ b/docker/Dockerfile-server
@@ -99,7 +99,7 @@ RUN apt-get update && apt-get install -y \
 ENV CXXFLAGS="${CXXFLAGS} -Wno-error=deprecated-declarations"
 ENV CFLAGS="${CFLAGS} -Wno-error=deprecated-declarations"
 
-RUN wget https://downloads.mariadb.org/interstitial/${MARIADB_VERSION}/source/${MARIADB_VERSION}.tar.gz \
+RUN wget https://archive.mariadb.org//${MARIADB_VERSION}/source/${MARIADB_VERSION}.tar.gz \
   && tar xf ${MARIADB_VERSION}.tar.gz \
   && mv /tmp/mytile ${MARIADB_VERSION}/storage/mytile \
   && cd ${MARIADB_VERSION} \
